@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.springframework.boot.gradle.tasks.run.BootRun
 
 plugins {
     kotlin("jvm")
@@ -80,6 +81,13 @@ kotlin {
 
 ktlint {
     version = libs.versions.ktlint.cli.version
+}
+
+tasks.named<BootRun>("bootRun") {
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED",
+        "--sun-misc-unsafe-memory-access=allow",
+    )
 }
 
 tasks.named<Jar>("jar") {
