@@ -61,6 +61,8 @@ application {
     applicationDefaultJvmArgs = listOf(
         "-Dio.ktor.development=$isDevelopment",
         "-Xshare:off",
+        "--enable-native-access=ALL-UNNAMED",
+        "--sun-misc-unsafe-memory-access=allow",
     )
 }
 
